# cryptocamp-prework

week1/exercises/elgamal/: README.md  elgamal.cpp  elgamal.h
week1/exercises/fast_exponentiation/: CMakeLists.txt  calc_squares.h  fast_exp.cpp  fast_exp.h  mul_mod.h
week1/exercises/helper/: args_parser.h
week1/exercises/mul_inverse/: mul_inv.cpp  mul_inv.h
week2/: Week2.tex
week2/exercises/secp_affine_point_add/: README.md  secp_affine_point_add.cpp  secp_coordinate.h
week2/exercises/secp_jacobian_point_add/: README.md  secp_coordinate.h  secp_jacobian_point_add.cpp
week3/: Week3.tex
week4/: Week4.tex
week5/: Week5.tex
week6/: Week6.tex
week7/: Week7.tex
